# NBAMind

./: .gitignore  LICENSE  README.md  features.md  pyproject.toml
archive/: master_player_analytics.csv  processing copy 2.py  processing copy.py  similarity copy 2.py
src/nbamind/: __init__.py  orchestration.py
src/nbamind/data/: __init__.py  fetcher.py  processing copy 2.py  processing copy.py  processing.py  processing_refactored.py  scraper.py
src/nbamind/features/: engineering.py  master_player_analytics.csv
src/nbamind/models/: __init__.py  baseline.py  evaluate.py  similarity.py  vae.py
